[gd_scene load_steps=20 format=3 uid="uid://c85kf8l7uon4y"]

[ext_resource type="TileSet" uid="uid://btbflj7yp73k6" path="res://tileset.tres" id="1_4dw0i"]
[ext_resource type="Script" path="res://main.gd" id="1_y1t4q"]
[ext_resource type="Texture2D" uid="uid://dfisjdyqn1yk5" path="res://ui/gear.png" id="2_sobss"]
[ext_resource type="Script" path="res://ui/settings_button.gd" id="3_id6mp"]
[ext_resource type="Texture2D" uid="uid://dvc8mh3n1n8lb" path="res://ui/reload.png" id="4_pj028"]
[ext_resource type="PackedScene" uid="uid://d1tltniwtlxa1" path="res://background/grid_polygons.tscn" id="4_v7h3p"]
[ext_resource type="Script" path="res://camera.gd" id="5_ec6j4"]
[ext_resource type="Script" path="res://ui/reload_button.gd" id="5_go2cy"]
[ext_resource type="FontFile" uid="uid://dfvuiacej3mv4" path="res://ui/CoffeeTerrace.otf" id="6_spr4b"]

[sub_resource type="Gradient" id="Gradient_ywgdr"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.38, 0.38, 0.38, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j0d18"]
gradient = SubResource("Gradient_ywgdr")
width = 256
height = 512
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mfogp"]
texture = SubResource("GradientTexture2D_j0d18")

[sub_resource type="LabelSettings" id="LabelSettings_ep16y"]
font = ExtResource("6_spr4b")
font_size = 86

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t71b6"]
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.247059, 0.403922, 0.517647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mh7ae"]
font = ExtResource("6_spr4b")
font_size = 50
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f2ubo"]
font = ExtResource("6_spr4b")
font_size = 25
font_color = Color(0.882353, 0.882353, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_qojdv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_orfpo"]
resource_name = "boing"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(0.103527, 1, 2.54912),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.99, 0.99), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_munat"]
_data = {
"RESET": SubResource("Animation_qojdv"),
"boing": SubResource("Animation_orfpo")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_y1t4q")

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = -1

[node name="Panel" type="Panel" parent="CanvasLayer3"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mfogp")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="GameOverPanel" type="Panel" parent="CanvasLayer2"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer2/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/GameOverPanel/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer2/GameOverPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_ep16y")

[node name="Button" type="Button" parent="CanvasLayer2/GameOverPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_spr4b")
theme_override_font_sizes/font_size = 54
theme_override_styles/normal = SubResource("StyleBoxFlat_t71b6")
text = "Play again"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Top" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 160.0
grow_horizontal = 2

[node name="SettingsButton" type="TextureButton" parent="CanvasLayer/Top"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 192.0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 128.0
grow_horizontal = 2
pivot_offset = Vector2(32, 32)
texture_normal = ExtResource("2_sobss")
script = ExtResource("3_id6mp")

[node name="ReloadButton" type="TextureButton" parent="CanvasLayer/Top"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 192.0
offset_top = 32.0
offset_right = 256.0
offset_bottom = 96.0
grow_horizontal = 2
pivot_offset = Vector2(32, 32)
texture_normal = ExtResource("4_pj028")
script = ExtResource("5_go2cy")

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Top"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "01234"
label_settings = SubResource("LabelSettings_mh7ae")
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/Top"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 32.0
offset_right = 161.0
offset_bottom = 62.0
grow_horizontal = 2
text = "123456"
label_settings = SubResource("LabelSettings_f2ubo")
horizontal_alignment = 1

[node name="Game" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 128)

[node name="GridContainer" parent="Game" instance=ExtResource("4_v7h3p")]
unique_name_in_owner = true
position = Vector2(288, 288)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game/GridContainer"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_munat")
}

[node name="Grid" type="TileMap" parent="Game/GridContainer"]
unique_name_in_owner = true
position = Vector2(-256, -256)
tile_set = ExtResource("1_4dw0i")
format = 2
layer_0/name = "Blocks"
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 65536, 2, 1, 131072, 3, 1, 196608, 4, 1, 262144, 5, 1, 327680, 6, 1, 393216, 7, 1, 524288, 65536, 1, 589824, 65537, 1, 655360, 65538, 1, 720896, 65539, 1, 786432)
layer_1/name = "Ghost"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 0.462745)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Test"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 0)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()

[node name="NextPattern" type="TileMap" parent="Game"]
unique_name_in_owner = true
position = Vector2(288, 608)
tile_set = ExtResource("1_4dw0i")
cell_quadrant_size = 8
format = 2

[node name="NextPattern2" type="TileMap" parent="Game"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.254902)
position = Vector2(289, 608)
tile_set = ExtResource("1_4dw0i")
cell_quadrant_size = 8
format = 2

[node name="NextPatternDefaultPosition" type="Marker2D" parent="Game"]
unique_name_in_owner = true
position = Vector2(288, 608)

[node name="Camera" type="Camera2D" parent="Game"]
unique_name_in_owner = true
position = Vector2(288, 320)
ignore_rotation = false
limit_top = 0
script = ExtResource("5_ec6j4")

[node name="ShakeTimer" type="Timer" parent="Game/Camera"]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="CanvasLayer2/GameOverPanel/CenterContainer/VBoxContainer/Button" to="." method="_on_newgame_button_pressed"]
[connection signal="button_down" from="CanvasLayer/Top/SettingsButton" to="CanvasLayer/Top/SettingsButton" method="_on_button_down"]
[connection signal="button_up" from="CanvasLayer/Top/SettingsButton" to="CanvasLayer/Top/SettingsButton" method="_on_button_up"]
[connection signal="pressed" from="CanvasLayer/Top/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="button_down" from="CanvasLayer/Top/ReloadButton" to="CanvasLayer/Top/ReloadButton" method="_on_button_down"]
[connection signal="button_up" from="CanvasLayer/Top/ReloadButton" to="CanvasLayer/Top/ReloadButton" method="_on_button_up"]
[connection signal="pressed" from="CanvasLayer/Top/ReloadButton" to="." method="_on_newgame_button_pressed"]
[connection signal="timeout" from="Game/Camera/ShakeTimer" to="Game/Camera" method="_on_shake_timer_timeout"]
